# ecopontos.github.io

./: .gitattributes  .gitignore  INVENTARIO_REPOS.md  METADADOS_REPOS_GITHUB.md  README.md  configuracao.html  configuracao.js  index.html  manifest.json  offline.html  pc.html  registros.html  registros.js  script.js  scriptpc.js  service-worker.js  sw.js
ecoforms/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLANO_MIGRACAO_UUIDV7.md  README.md  _analysis_output.json  build-debug-mobile.ps1  build-debug-mobile.sh  build-debug.ps1  check-mobile-prerequisites.ps1  check-prerequisites.ps1  data-flow.md  ecoponto-config.json  force-offline.html  iniciar-servidor-vistoria.bat  install-success.html  local_db_schema.json  opencode.json  package-lock.json  package.json  prepare-env.ps1  remove-debug-logs.ps1  server.js  supabase-config.js  update-css-references.ps1  update-css.ps1  validate-project.ps1
ecoforms/desktop/src-tauri/: 2  Cargo.toml  tauri.conf.json
ecoforms/desktop/src-tauri/capabilities/: default.json
ecoforms/desktop/src-tauri/src/: database.rs  lan_paths.rs  lib.rs  main.rs  network.rs  session.rs  sql_guard.rs  supabase_admin.rs  uuid_v7.rs
ecoforms/desktop/src-tauri/src/commands/: actions.rs  audit.rs  auth.rs  crypto.rs  email.rs  key_rotation.rs  lan_http.rs  lan_storage.rs  lan_ws.rs  legacy_sync.rs  mod.rs  rbac.rs  rbac_seed.sql  setup.rs  sync_pesagens.rs  sync_residuos.rs  sync_roteiros.rs
ecoforms/desktop/src-tauri/src/lan_server/: auth.rs  commands.rs  discovery.rs  file_routes.rs  hub.rs  mod.rs  routes.rs  server.rs  state.rs  ws.rs
ecoponto/: campos-schema.js  campos.js  pc.html  (+13 more)
ecoponto-beta/: Code.gs  campos-schema.js  configuracao.html  configuracao.js  guia.html  index.html  manifest.json  pc.html  registros.js  script.js  scriptpc.js  service-worker.js
(+1456 files in other folders)
