[package]
name = "app"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# devtools: em Tauri v2, devtools são automáticas em builds de debug.
# O feature "devtools" só força devtools em RELEASE — omitido por segurança
# (hardening pré-produção). O comando toggle_devtools já é gated por cfg(debug_assertions).
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype", "backup"] }
anyhow = "1.0"
base64 = "0.22"
bcrypt = "0.16"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2.12", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
postgres = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
mdns-sd = "0.11"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
tauri = { version = "2.9.5", features = ["test"] }
